# exc-help

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml  setup.py
src/exchelp/: __init__.py  exception_helper.py
tests/exchelp/: test_exception_helper.py
