[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exc-help"
version = "1.0.4"
authors = [
  { name="Olgun Erguezel", email="olgunerguzel@gmail.com" },
]
description = "Exception handler and helper python package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Information Technology",
     "License :: OSI Approved :: MIT License",  
     "Operating System :: OS Independent",        
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
]

[project.urls]
"Homepage" = "https://github.com/erguzel/exc-help"
"Bug Tracker" = "https://github.com/erguzel/exc-help"