[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exc-help"
version = "0.0.1"
authors = [
  { name="Olgun Erguezel", email="olgunerguzel@gmail.com" },
]
description = "Exception handler and helper python package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Information Technology",
     "License :: OSI Approved :: MIT License",  
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["examples.*", "tests.*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.urls]
"Homepage" = "https://github.com/erguzel/exc-help"
"Bug Tracker" = "https://github.com/erguzel/exc-help"